src/snapshots/pepper__tests__parser_tests@tests_parser_submodules_simple.pr.snap
---
source: src/lib.rs
description: "module submod {\n    func aaa() -> Int32 {\n        123\n    }\n}\n\nfunc outer() -> Int32 {\n    submod.aaa()\n}"
expression: ast.unwrap()
input_file: tests/parser/submodules/simple.pr
snapshot_kind: text
---
- Module:
    name: submod
    ast:
      - Function:
          name: aaa
          params: []
          return_ty:
            Primitive:
              base: Int32
              segments: []
          body:
            statements: []
            return_expr:
              Int: "123"
- Function:
    name: outer
    params: []
    return_ty:
      Primitive:
        base: Int32
        segments: []
    body:
      statements: []
      return_expr:
        Call:
          callee:
            Name:
              base: submod
              segments:
                - aaa
          args: []
