src/snapshots/pepper__tests__parser_tests@tests_parser_types_all_enum_variants.pr.snap
---
source: src/lib.rs
description: "enum AllEnumVariants =\n    | Unit\n    | TupleVariant(Int32, String)\n    | StructVariant { x Float64, y Float64 }"
expression: ast.unwrap()
input_file: tests/parser/types/all_enum_variants.pr
snapshot_kind: text
---
- Enum:
    name: AllEnumVariants
    generics: ~
    variants:
      - Unit: Unit
      - Tuple:
          name: TupleVariant
          fields:
            - Primitive:
                name:
                  base: Int32
                  segments: []
                generics: ~
            - Primitive:
                name:
                  base: String
                  segments: []
                generics: ~
      - Struct:
          name: StructVariant
          fields:
            - name: x
              ty:
                Primitive:
                  name:
                    base: Float64
                    segments: []
                  generics: ~
            - name: y
              ty:
                Primitive:
                  name:
                    base: Float64
                    segments: []
                  generics: ~
