src/snapshots/pepper__tests__parser_tests@tests_parser_types_enum_generic.pr.snap
---
source: src/lib.rs
description: "enum Option[T] = Some(T) | None"
expression: ast.unwrap()
input_file: tests/parser/types/enum_generic.pr
snapshot_kind: text
---
- Enum:
    name: Option
    generics:
      - T
    variants:
      - Tuple:
          name: Some
          fields:
            - Primitive:
                base: T
                segments: []
      - Unit: None
