src/snapshots/pepper__tests__parser_tests@tests_parser_types_simple_struct.pr.snap
---
source: src/lib.rs
description: "struct SimpleStruct {\n    aa Int32,\n    bb Float64,\n    cc String,\n}"
expression: ast.unwrap()
input_file: tests/parser/types/simple_struct.pr
snapshot_kind: text
---
- Struct:
    name: SimpleStruct
    fields:
      - name: aa
        ty:
          Primitive:
            base: Int32
            segments: []
      - name: bb
        ty:
          Primitive:
            base: Float64
            segments: []
      - name: cc
        ty:
          Primitive:
            base: String
            segments: []
